<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HomeActivity">

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="Hi, Michael"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_heading_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/iv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_streak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:drawableStart="@drawable/ic_flame"
        android:drawablePadding="@dimen/margin_small"
        android:text="12 day streak"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_profile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/margin_large"
        android:contentDescription="@string/iv_profile_desc"
        android:src="@drawable/default_avatar"
        app:layout_constraintBottom_toBottomOf="@id/tv_streak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_greeting" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_today_goal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_streak">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_medium">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_today_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_goal"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_subtitle"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_trophy"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/iv_trophy_desc"
                android:src="@drawable/ic_trophy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_goal_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="Complete Passing Fundamentals Module"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_today_goal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_goal_description">

                <CheckBox
                    android:id="@+id/cb_goal_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completed_str"
                    android:textColor="@color/text_primary"
                    android:buttonTint="@color/primary" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_learning_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/continue_learning"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_today_goal" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_next_lesson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_large"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_learning_status">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_football"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/bg_circle_dark"
                android:contentDescription="@string/iv_football_desc"
                android:padding="@dimen/margin_medium"
                android:src="@drawable/ic_football"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_lesson_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="Quarterback Mechanics"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_subtitle"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_football"
                app:layout_constraintTop_toTopOf="@id/iv_football" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_lesson_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="Learn proper stance and grip"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_football"
                app:layout_constraintTop_toBottomOf="@id/tv_lesson_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/bg_button_primary"
                android:paddingStart="@dimen/margin_large"
                android:paddingEnd="@dimen/margin_large"
                android:text="@string/start_str"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_lesson_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout_achievements"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_next_lesson">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="Medal"
                    android:src="@drawable/ic_medal" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_achievement_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/latest_achievement"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_caption"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_achievement_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="Completed Basic Rules"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_body" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_achievement_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="Earned 2 days ago"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/text_caption" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="Light bulb"
                    android:src="@drawable/ic_lightbulb" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/quick_tip"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_caption"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_tip_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="Keep your eyes on the ball's laces while throwing"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_body" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>